--- a/notebook/data/2. MODEL TRAINING.ipynb
+++ b/notebook/data/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -54,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/stud.csv')"
+    "df = pd.read_csv('stud.csv')"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
